Day3_History.txt

--- a/02-K8s/09-Secrets/helloworld-secrets.yml
+++ b/02-K8s/09-Secrets/helloworld-secrets.yml
@@ -4,5 +4,5 @@ metadata:
   name: db-secrets
 type: Opaque
 data:
-  username: cm9vdA==
-  password: cGFzc3dvcmQ=
+  username: YW1pdHZhc2hpc3Q3
+  password: UGFzc0B3b3JkMTIzNA==
