--- a/02-K8s/16-nfs-persistent-volume/nfs-busybox-rc.yaml
+++ b/02-K8s/16-nfs-persistent-volume/nfs-busybox-rc.yaml
@@ -6,7 +6,7 @@ kind: ReplicationController
 metadata:
   name: nfs-busybox
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     name: nfs-busybox
   template:
@@ -19,7 +19,7 @@ spec:
         command:
           - sh
           - -c
-          - 'while true; do date > /mnt/index.html; hostname >> /mnt/index.html; sleep $(($RANDOM % 5 + 5)); done'
+          - 'while true; do date >> /mnt/index.html; hostname >> /mnt/index.html; sleep $(($RANDOM % 5 + 5)); done'
         imagePullPolicy: IfNotPresent
         name: busybox
         volumeMounts:
